<resources>
    <string name="app_name">NetworkRequestExample</string>
    <string name="start_the_call">Start the call</string>
    <string name="question">What is your highest qualification?</string>
    <string name="graduation">Graduation</string>
    <string name="post_graduation">Post Graduation</string>
    <string name="phd">PHD</string>
    <string name="create_database">Create Database</string>
    <string name="delete_row">Delete Row</string>
    <string name="update_row">Update row</string>
    <string name="department">Department</string>
    <string name="designation">Designation</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>
</resources>